<resources>
    <string name="app_name">Restop Client</string>
    <string name="scanner">Qr Scanner</string>
    <string name="pointsBalance">Balance &amp; Points</string>
    <string name="points">Points</string>
    <string name="pts">Pts</string>
    <string name="balance">Balance</string>
    <string name="dzd">DZD</string>
    <string name="invalid_username">Please enter a valid username</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Password must be over 5 characters</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="Linvalid_email">Please enter a valid email</string>
    <string name="balanceMore">each point equals 15 DZD. Gain more points by commanding more plats</string>
    <string name="pointsMore">using points you can gain free plats. Each point has a balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>