<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameQrScan"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QrScan">

    <include
        android:id="@+id/tashbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="12"
        android:fontFamily="@font/germania_one"
        android:text="@string/pointsBalance"
        android:textAlignment="viewStart"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toEndOf="@+id/points"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/points" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/balance"
        app:layout_constraintEnd_toEndOf="@id/balance"
        app:layout_constraintStart_toStartOf="@id/balance">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/layout_points"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ptsIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="center"
                    android:src="@mipmap/coins_foreground"
                    android:contentDescription="@string/points" />

                <TextView
                    android:id="@+id/txt_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/points"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/ptsBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:layout_toStartOf="@id/pts"
                    android:fontFamily="@font/germania_one"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/pts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:layout_toStartOf="@id/morePts"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/pts"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/morePts"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_more_points"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="@id/layout_points"
                app:layout_constraintStart_toStartOf="@id/layout_points"
                app:layout_constraintTop_toBottomOf="@id/layout_points"
                android:visibility="gone">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/points_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/card">
                    <TextView
                        android:id="@+id/help1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/pointsMore"/>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tashbar"
        app:layout_constraintVertical_bias="0.74">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/balance_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/balanceIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/balance"
                    android:scaleType="center"
                    android:src="@mipmap/balance_foreground" />

                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/balance"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/dzdBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:layout_toStartOf="@+id/dzd"
                    android:fontFamily="@font/germania_one"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:id="@+id/dzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:layout_toStartOf="@+id/more"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/dzd"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/more"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />


            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_more_balance"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="@id/balance_layout"
                app:layout_constraintStart_toStartOf="@id/balance_layout"
                app:layout_constraintTop_toBottomOf="@id/balance_layout"
                android:visibility="gone">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/balance_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/card">
                    <TextView
                        android:id="@+id/help2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/balanceMore" />
                </com.google.android.material.card.MaterialCardView>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_qr_code_scanner_24"
        app:backgroundTint="@color/tashbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.196"
        app:rippleColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="420dp" />

</androidx.constraintlayout.widget.ConstraintLayout>